--- a/index.html
+++ b/index.html
@@ -158,10 +158,10 @@
             </section>
             <!--Links-->
             <section>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
+                <a target="_bLank" href="https://chris-kherk.github.io/Visiting-Angels-21/">https://chris-kherk.github.io/Visiting-Angels-21/</a><br>
+                <a target="_bLank" href="https://baaykherkroldanseo.s3.us-east-005.backblazeb2.com/Visiting+Angels/Visiting+Angels-21/index.html">https://baaykherkroldanseo.s3.us-east-005.backblazeb2.com/Visiting+Angels/Visiting+Angels-21/index.html</a><br>
+                <a target="_bLank" href="https://kradscloudstack.s3.ap-northeast-1.amazonaws.com/Visiting+Angels/Visiting+Angels-21/index.html">https://kradscloudstack.s3.ap-northeast-1.amazonaws.com/Visiting+Angels/Visiting+Angels-21/index.html</a><br>
+                <a target="_bLank" href="https://frolicking-alpaca-72e653.netlify.app">https://frolicking-alpaca-72e653.netlify.app</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
